CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(asio_udp_device)

SET(CMAKE_BUILD_TYPE Release)

INCLUDE_DIRECTORIES(include)

ADD_LIBRARY(asio_udp_device SHARED src/ASIOUDPDevice.cc)

FIND_PACKAGE(Boost COMPONENTS system REQUIRED)
TARGET_LINK_LIBRARIES(asio_udp_device
  ${Boost_SYSTEM_LIBRARY})

SET(CMAKE_SKIP_BUILD_RPATH FALSE)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)

INSTALL(TARGETS asio_udp_device DESTINATION lib)
